--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm Phong. Welcome to the very first appearance of my pages</p>
+<p>I'm Phong. Welcome to the very first appearance of my pages.</p>
+<p>My page is under development. Stay tuned.</p>
 </body>
 </html>
