--- a/index.html
+++ b/index.html
@@ -102,17 +102,15 @@ My almost 5 years at Big 4 companies also helped me develop professional working
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 18 Jul 1991</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> https://about.me/phongtran91</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +84 935 880 865</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Ho Chi Minh, Vietnam</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Marital status:</strong> Married</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Financial Management</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> quyphong91@gmail.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Job status:</strong> Looking for opportunities</li>
                 </ul>
               </div>
             </div>
