--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Phong</h1>
-      <p>I'm <span class="typed" data-typed-items="Tax consultant, Technology enthusiasts, Father"></span></p>
+      <h1>Phong Tran</h1>
+      <p>I'm <span class="typed" data-typed-items="Tax consultant, Technology enthusiasts"></span></p>
     </div>
   </section><!-- End Hero -->
 
