--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Tax consultant &amp;  </h3>
+            <h3>Tax consultant</h3>
             <p class="font-italic">
               Assisting a large number of foreign companies doing business in Vietnam in the past 6 years, I have a broad understanding of how tax fits into the wider business picture. My in-depth technical knowledge across from different types of tax (PIT, CIT, VAT, FCT, Customs duties) could help your company meet compliance responsibilities while seizing available tax saving opportunities.
 
