--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Tran Quy Phong - Resume</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -70,7 +70,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Phong Tran</h1>
-      <p>I'm <span class="typed" data-typed-items="Tax consultant, Technology enthusiasts"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Tax consultant, Technology enthusiast"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -131,7 +131,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>As </p>
         </div>
 
         <div class="row no-gutters">
