--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>As </p>
+          <p>"My pleasure to help you doing business in Vietnam", I usually say. </p>
         </div>
 
         <div class="row no-gutters">
@@ -139,8 +139,8 @@ Now, I am looking for a working environment which offers to learn on-the-job and
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
-              <span data-toggle="counter-up">232</span>
-              <p><strong>Happy Clients</strong> consequuntur quae</p>
+              <span data-toggle="counter-up">200+</span>
+              <p><strong>Engagements</strong> with success</p>
             </div>
           </div>
 
