--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
-              <span data-toggle="counter-up">200+</span>
+              <span data-toggle="counter-up">200</span>
               <p><strong>Engagements</strong> with success</p>
             </div>
           </div>
