--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
                 <p>+84 935 880 865</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/place/69,+3a+%C4%90%C6%B0%E1%BB%9Dng+Nguy%C3%AAn+H%E1%BB%93ng,+ph%C6%B0%E1%BB%9Dng+11,+G%C3%B2+V%E1%BA%A5p,+H%E1%BB%93+Ch%C3%AD+Minh,+Vietnam/@10.818484,106.6894303,17z/data=!3m1!4b1!4m5!3m4!1s0x317528eee666f8cf:0x76b63989324b2cb7!8m2!3d10.818484!4d106.691619" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://goo.gl/maps/YYijRgm43PynGnMY8" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
