--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
-              <i class="icofont-document-folder"></i>
+              <i class="icofont-globe"></i>
               <span data-toggle="counter-up">14</span>
               <p><strong>Countries</strong>carry business in Vietnam</p>
             </div>
