--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
             <div class="count-box">
               <i class="icofont-globe"></i>
               <span data-toggle="counter-up">14</span>
-              <p><strong>Countries</strong>carry business in Vietnam</p>
+              <p><strong>Countries</strong> I have helped to carry business in Vietnam</p>
             </div>
           </div>
 
