--- a/index.html
+++ b/index.html
@@ -153,15 +153,15 @@ Now, I am looking for a working environment which offers to learn on-the-job and
             <div class="count-box">
               <i class="icofont-live-support"></i>
               <span data-toggle="counter-up">1,463</span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
+              <p><strong>Hours Of Support</strong> with dedication</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
-              <i class="icofont-users-alt-5"></i>
-              <span data-toggle="counter-up">15</span>
-              <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
+              <i class="icofont-industries"></i>
+              <span data-toggle="counter-up">20</span>
+              <p><strong>Industries</strong> ...</p>
             </div>
           </div>
 
