--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Phong Tran</h1>
-      <p>I'm <span class="typed" data-typed-items="Tax consultant, Technology enthusiast"></span></p>
+      <p>I'm <span class="typed" data-typed-items="a tax consultant, technology enthusiast"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -79,9 +79,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My career objective is to become an inspiring knowledgeable person whose expertise are not limited to taxation but also including finance, technology, good business senses and problem-solving skills.
-            
-            Now, I am looking for a working environment which offers to learn on-the-job and exposure to every angle of business to achieve the above goals.</p>
+          <p>My expertise solely lies in taxation. However, as a technology true lover, I am enthusiastic about leveraging the rapid development of technology to solve business problems</p>
         </div>
 
         <div class="row">
