--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>"My pleasure to help you doing business in Vietnam", I usually say. </p>
+          <p>Some key figures about my engagements and valuable clients</p>
         </div>
 
         <div class="row no-gutters">
@@ -134,16 +134,9 @@ Now, I am looking for a working environment which offers to learn on-the-job and
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
+              <p><strong>More than</p>
               <span data-toggle="counter-up">200</span>
               <p><strong>Engagements</strong> with success</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="count-box">
-              <i class="icofont-globe"></i>
-              <span data-toggle="counter-up">14</span>
-              <p><strong>Countries</strong> I have helped to carry business in Vietnam</p>
             </div>
           </div>
 
@@ -151,7 +144,15 @@ Now, I am looking for a working environment which offers to learn on-the-job and
             <div class="count-box">
               <i class="icofont-live-support"></i>
               <span data-toggle="counter-up">1,463</span>
-              <p><strong>Hours Of Support</strong> with dedication</p>
+              <p><strong>Hours of Support</strong> with dedication</p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="count-box">
+              <i class="icofont-globe"></i>
+              <span data-toggle="counter-up">14</span>
+              <p><strong>Countries and more</strong> I have helped to carry business in Vietnam</p>
             </div>
           </div>
 
