--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My expertise solely lies in taxation. However, as a technology true lover, I am enthusiastic about leveraging the rapid development of technology to solve business problems</p>
+          <p>My expertise solely lies in taxation. However, as a technology true lover, I am enthusiastic about leveraging the rapid development of technology to solve business problems.</p>
         </div>
 
         <div class="row">
@@ -144,7 +144,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
             <div class="count-box">
               <i class="icofont-live-support"></i>
               <span data-toggle="counter-up">1,463</span>
-              <p><strong>Hours of Support</strong> with dedication</p>
+              <p><strong>support hours</strong> with dedication</p>
             </div>
           </div>
 
@@ -152,7 +152,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
             <div class="count-box">
               <i class="icofont-globe"></i>
               <span data-toggle="counter-up">14</span>
-              <p><strong>Countries and more</strong> I have helped to carry business in Vietnam</p>
+              <p><strong>Countries and more</strong> m</p>
             </div>
           </div>
 
