--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My expertise solely lies in taxation. However, as a technology true lover, I am enthusiastic about leveraging the rapid development of technology to solve business problems.</p>
+          <p>My expertise solely lies in taxation. However, as a technology true lover, I am enthusiastic about leveraging the rapid development of technology to solve business problems</p>
         </div>
 
         <div class="row">
@@ -134,25 +134,24 @@ Now, I am looking for a working environment which offers to learn on-the-job and
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
-              <p><strong>More than</p>
               <span data-toggle="counter-up">200</span>
               <p><strong>Engagements</strong> with success</p>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="icofont-live-support"></i>
-              <span data-toggle="counter-up">1,463</span>
-              <p><strong>support hours</strong> with dedication</p>
+              <span data-toggle="counter-up">1,500</span>
+              <p><strong>Hours</strong> of consulting</p>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
-              <i class="icofont-globe"></i>
-              <span data-toggle="counter-up">14</span>
-              <p><strong>Countries and more</strong> m</p>
+              <i class="icofont-live-globe"></i>
+              <span data-toggle="counter-up">15</span>
+              <p><strong>Countries</strong> with dedication</p>
             </div>
           </div>
 
