--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
+              <p>More than</p>
               <span data-toggle="counter-up">200</span>
               <p><strong>Engagements</strong> with success</p>
             </div>
@@ -142,6 +143,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="icofont-live-support"></i>
+              <p>More than</p>
               <span data-toggle="counter-up">1,500</span>
               <p><strong>Hours</strong> of consulting</p>
             </div>
@@ -149,7 +151,8 @@ Now, I am looking for a working environment which offers to learn on-the-job and
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
-              <i class="icofont-live-globe"></i>
+              <i class="icofont-globe"></i>
+              <p>More than</p>
               <span data-toggle="counter-up">15</span>
               <p><strong>Countries</strong> with dedication</p>
             </div>
@@ -158,6 +161,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="icofont-industries"></i>
+              <p>More than</p>
               <span data-toggle="counter-up">20</span>
               <p><strong>Industries</strong> ...</p>
             </div>
