--- a/index.html
+++ b/index.html
@@ -133,15 +133,6 @@ Now, I am looking for a working environment which offers to learn on-the-job and
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
-              <i class="icofont-simple-smile"></i>
-              <p>More than</p>
-              <span data-toggle="counter-up">200</span>
-              <p><strong>Engagements</strong> with success</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="count-box">
               <i class="icofont-live-support"></i>
               <p>More than</p>
               <span data-toggle="counter-up">1,500</span>
@@ -149,21 +140,30 @@ Now, I am looking for a working environment which offers to learn on-the-job and
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="count-box">
+              <i class="icofont-simple-smile"></i>
+              <p>For more than</p>
+              <span data-toggle="counter-up">100</span>
+              <p><strong>Happy</strong> clients</p>
+            </div>
+          </div>
+
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="icofont-globe"></i>
-              <p>More than</p>
+              <p>From more than</p>
               <span data-toggle="counter-up">15</span>
-              <p><strong>Countries</strong> with dedication</p>
+              <p><strong>Countries</strong> accross the world</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="icofont-industries"></i>
-              <p>More than</p>
+              <p>in more than</p>
               <span data-toggle="counter-up">20</span>
-              <p><strong>Industries</strong> ...</p>
+              <p><strong>Industries</strong> doing business in Vietnam</p>
             </div>
           </div>
 
