--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
             </div>
 
             <div class="progress">
-              <span class="skill">MS Power Bi <i class="val">60%</i></span>
+              <span class="skill">MS Power BI <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -244,34 +244,37 @@ Now, I am looking for a working environment which offers to learn on-the-job and
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>My journey after graduate.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Summary</h4>
+              <p><em>Dedicated and integrity tax consultant with 4+ years of experience assisting companies doing business in Vietnam in compliant way.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Ho Chi Minh City, Vietnam</li>
+                <li>+84 935 880 865</li>
+                <li>quyphong91@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Disploma &amp; Certificate of IFRS (on-going)</h4>
+              <h5>Apr 2020 - May 2020</h5>
+              <p><em>ACCA</em></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Chief Accountant training</h4>
+              <h5>Mar 2015 - May 2015</h5>
+              <p><em>University of Economics Ho Chi Minh City</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Bachelor of Financial Management</h4>
+              <h5>Sep 2009 - June 2013</h5>
+              <p><em>Da Nang University of Economics</em></p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
