--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Summary</h4>
+              <h4>Tran Quy Phong</h4>
               <p><em>Dedicated and integrity tax consultant with 4+ years of experience assisting companies doing business in Vietnam in compliant way.</em></p>
               <ul>
                 <li>Ho Chi Minh City, Vietnam</li>
