--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
-              <p>For more than</p>
+              <p>for more than</p>
               <i class="icofont-simple-smile"></i>
               <span data-toggle="counter-up">100</span>
               <p><strong>Happy</strong> clients</p>
@@ -151,17 +151,17 @@ Now, I am looking for a working environment which offers to learn on-the-job and
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
-              <p>From more than</p>
+              <p>from more than</p>
               <i class="icofont-globe"></i>
               <span data-toggle="counter-up">15</span>
-              <p><strong>Countries</strong> accross the world</p>
+              <p><strong>Countries</strong> accross over the world</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <p>in more than</p>
-              <i class="icofont-industries"></i>
+              <i class="icofont-globe"></i>
               <span data-toggle="counter-up">20</span>
               <p><strong>Industries</strong> doing business in Vietnam</p>
             </div>
@@ -280,25 +280,39 @@ Now, I am looking for a working environment which offers to learn on-the-job and
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Senior Tax Advisory (Deputy Manager)</h4>
+              <h5>Nov 2016 - Feb 2019</h5>
+              <p><em>EY Vietnam Limited </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Work closely with Manager and/or Director in conducting tax compliance and advisory services, including but not limited to PIT, CIT, VAT, Trade & Customs for leading companies in Vietnam;</li>
+                <li>Participate in due diligence for M&A transactions; </li>
+                <li>Working with tax/customs authorities during tax/customs audit;</li>
+                <li>Mentor and assist staff to discover and reach their full potential;</li>
+                <li>Manage deadlines, team performance and clients’ expectation; and</li>
+                <li>Developing effective relationships with clients and key contacts from relevant parties</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Tax consultant</h4>
+              <h5>Oct 2014 - Sep 2016</h5>
+              <p><em>KPMG Tax &amp; Advisory Limited Branch</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Participate in conducting and completion of human capital advisory and compliance services, such as payroll, PIT, compulsory insurance, work permit</li>
+                <li>Communicate effectively with Senior at each stage of conducting the above services; and</li>
+                <li>Prepare necessary documentation for Senior’s review;</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Accountant cum HR</h4>
+              <h5>May 2013 - Feb 2014</h5>
+              <p><em>Olalani Resort &amp; Condotel (Da Nang)</em></p>
+              <ul>
+                <li>Verify and review the source documents;</li>
+                <li>Manage and post accounting transaction into ERP systems;</li>
+                <li>Ensure timely bank payment;</li>
+                <li>Manage payroll and employees’ records;</li>
+                <li>Set up job interview schedule and join the interview with General Director; and;</li>
+                <li>Assist in launching ERP systems;</li>
               </ul>
             </div>
           </div>
