--- a/index.html
+++ b/index.html
@@ -267,6 +267,16 @@ Now, I am looking for a working environment which offers to learn on-the-job and
               <p><em>ACCA</em></p>
             </div>
             <div class="resume-item">
+              <h4>Data analysis with Python</h4>
+              <h5>Apr 2019 - May 2019</h5>
+              <p><em>Coderschool</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Python</h4>
+              <h5>Mar 2019 - May 2019</h5>
+              <p><em>PYMI.VN</em></p>
+            </div>
+            <div class="resume-item">
               <h4>Chief Accountant training</h4>
               <h5>Mar 2015 - May 2015</h5>
               <p><em>University of Economics Ho Chi Minh City</em></p>
