--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
     </section><!-- End Resume Section -->
 
     <!-- ======= Facts Section ======= -->
-    <section id="Portfolio" class="Portfolio">
+    <section id="portfolio" class="portfolio">
       <div class="container">
 
         <div class="section-title">
