--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
+          <li><a href="#facts"><i class="bx bx-book-content"></i> Facts</a></li>
         </ul>
       </nav><!-- .nav-menu -->
       <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
@@ -333,7 +333,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
     </section><!-- End Resume Section -->
 
     <!-- ======= Facts Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <section id="Facts" class="Facts">
       <div class="container">
 
         <div class="section-title">
