--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
     </section><!-- End Resume Section -->
 
     <!-- ======= Facts Section ======= -->
-    <section id="Facts" class="Facts">
+    <section id="facts" class="facts">
       <div class="container">
 
         <div class="section-title">
