--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior Tax Advisory (Deputy Manager)</h4>
+              <h4>Senior Tax Advisory (Deputy Tax Manager)</h4>
               <h5>Nov 2016 - Feb 2019</h5>
               <p><em>EY Vietnam Limited </em></p>
               <ul>
