--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Tran Quy Phong - Resume</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <meta content="Tran Quy Phong resume" name="descriptison">
+  <meta content="Tran Quy Phong resume" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -48,6 +48,7 @@
           <a href="https://www.facebook.com/quyphong/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.linkedin.com/in/phong-tran-3b7b2780" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://join.skype.com/invite/hWboXgx3wyqE" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="https://github.com/quyphong91" class="google-plus"><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
@@ -57,6 +58,7 @@
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#facts"><i class="bx bx-book-content"></i> Facts</a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#services"><i class="bx bx-handshake-deal"></i> Typical services</a></li>
         </ul>
       </nav><!-- .nav-menu -->
       <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
@@ -80,7 +82,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My expertise solely lies in taxation. However, as a technology true lover, I am enthusiastic about leveraging the rapid development of technology to solve business problems</p>
+          <p>My expertise solely lies in taxation so far. 
+            However, I am expanding my knowledge in Management Accountant by pursuing CMA certificate.
+            As a technology true lover, I am enthusiastic about leveraging the rapid development of technology to solve business problems</p>
         </div>
 
         <div class="row">
@@ -90,9 +94,12 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Tax consultant</h3>
             <p class="font-italic">
-              Assisting a large number of foreign companies doing business in Vietnam in the past 6 years, I have a broad understanding of how tax fits into the wider business picture. My in-depth technical knowledge across from different types of tax (PIT, CIT, VAT, FCT, Customs duties) could help your company meet compliance responsibilities while seizing available tax saving opportunities.
-
-My almost 5 years at Big 4 companies also helped me develop professional working style, foster curiosity to learn new things as well as a high sense of commitment and responsibility.
+              Assisting a large number of foreign companies doing business in Vietnam in the past 6 years, 
+              I have a broad understanding of how tax fits into the wider business picture.
+              My in-depth technical knowledge across from different types of tax (PIT, CIT, VAT, FCT, Customs duties) 
+              could help your company meet compliance responsibilities while seizing available tax saving opportunities.
+              My almost 5 years at Big 4 companies also helped me develop professional working style, 
+              foster curiosity to learn new things as well as a high sense of commitment and responsibility.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -162,7 +169,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
               <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
                 <div class="count-box">
                   <p>in more than</p>
-                  <i class="icofont-globe"></i>
+                  <i class="icofont-industries"></i>
                   <span data-toggle="counter-up">20</span>
                   <p><strong>Industries</strong> doing business in Vietnam</p>
                 </div>
@@ -265,6 +272,51 @@ Now, I am looking for a working environment which offers to learn on-the-job and
 
       </div>
     </section><!-- End Resume Section -->
+
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="services">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Typical services</h2>
+          <p>Typical service which I usually reder to my clients include:</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+            <div class="icon"><i class="icofont-stethoscope-alt"></i></div>
+            <h4 class="title"><a href="">Compliance review</a></h4>
+            <p class="description">Review tax compliant status. Identify tax risk areas and recommend remedy course of actions (if any).</p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon"><i class="icofont-chart-bar-graph"></i></div>
+            <h4 class="title"><a href="">Dolor Sitema</a></h4>
+            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon"><i class="icofont-earth"></i></div>
+            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+            <div class="icon"><i class="icofont-image"></i></div>
+            <h4 class="title"><a href="">Magni Dolores</a></h4>
+            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon"><i class="icofont-settings"></i></div>
+            <h4 class="title"><a href="">Nemo Enim</a></h4>
+            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon"><i class="icofont-tasks-alt"></i></div>
+            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
+            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Services Section -->
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
