--- a/index.html
+++ b/index.html
@@ -286,32 +286,34 @@ Now, I am looking for a working environment which offers to learn on-the-job and
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="icofont-stethoscope-alt"></i></div>
             <h4 class="title"><a href="">Compliance review</a></h4>
-            <p class="description">Review tax compliant status. Identify tax risk areas and recommend remedy course of actions (if any).</p>
+            <p class="description">Review clients' tax compliant status. Identify tax risk areas and recommend remedy course of actions (if any)</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="icofont-chart-bar-graph"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            <div class="icon"><i class="icofont-paper"></i></div>
+            <h4 class="title"><a href="">Ad-hoc tax advice</a></h4>
+            <p class="description">Provide tax advice on ad-hoc basis via phone call, emails, memo, long-form report</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="icofont-earth"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <div class="icon"><i class="icofont-court-hammer"></i></div>
+            <h4 class="title"><a href="">Audit and post audit support</a></h4>
+            <p class="description">Assist clients in working with tax auditor during the tax audit and advise best practices. 
+              Advise necessary course of actions after the tax audit in case of dispute</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="icofont-image"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <div class="icon"><i class="icofont-investigation"></i></div>
+            <h4 class="title"><a href="">Tax due diligence</a></h4>
+            <p class="description">Review and identify potential tax risks arose from the sellers' operation 
+              which may create future liability for the buyers after the M&A</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="icofont-settings"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+            <div class="icon"><i class="icofont-ui-calculator"></i></div>
+            <h4 class="title"><a href="">Tax return preparation</a></h4>
+            <p class="description">Assist the clients in calculating the tax liability and preparing appropriate tax returns</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="icofont-tasks-alt"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <h4 class="title"><a href="">Payroll and personal </a></h4>
+            <p class="description"> Day-to-day assistance on all payroll and payroll-related issues</p>
           </div>
         </div>
 
