--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
             <p class="description">Assist the clients in calculating the tax liability and preparing appropriate tax returns</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="icofont-tasks-alt"></i></div>
+            <div class="icon"><i class="icofont-bank"></i></div>
             <h4 class="title"><a href="">Payroll and personal </a></h4>
             <p class="description"> Day-to-day assistance on all payroll and payroll-related issues</p>
           </div>
