--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#facts"><i class="bx bx-book-content"></i> Facts</a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#services"><i class="bx bx-handshake-deal"></i> Typical services</a></li>
+          <li><a href="#services"><i class="bx bxs-briefcase"></i> Typical services</a></li>
         </ul>
       </nav><!-- .nav-menu -->
       <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
