--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
             <p class="description">Review clients' tax compliant status. Identify tax risk areas and recommend remedy course of actions (if any)</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="icofont-paper"></i></div>
+            <div class="icon"><i class="icofont-presentation"></i></div>
             <h4 class="title"><a href="">Ad-hoc tax advice</a></h4>
             <p class="description">Provide tax advice on ad-hoc basis via phone call, emails, memo, long-form report</p>
           </div>
@@ -372,7 +372,7 @@ Now, I am looking for a working environment which offers to learn on-the-job and
               which may create future liability for the buyers after the M&A</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="icofont-ui-calculator"></i></div>
+            <div class="icon"><i class="icofont-law-document"></i></div>
             <h4 class="title"><a href="">Tax return preparation</a></h4>
             <p class="description">Assist the clients in calculating the tax liability and preparing appropriate tax returns</p>
           </div>
