--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Tran Quy Phong</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.facebook.com/quyphong/" target="_blank">facebook.com/quyphong/</a>class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.linkedin.com/in/phong-tran-3b7b2780" target="_blank">linkedin.com/in/phong-tran-3b7b2780</a>class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://join.skype.com/invite/hWboXgx3wyqE" target="_blank">join.skype.com/invite/hWboXgx3wyqE</a>class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="https://github.com/quyphong91" target="_blank">github.com/quyphong91</a>class="google-plus"><i class="bx bxl-github"></i></a>
+          <a href="https://www.facebook.com/quyphong/" class="facebook"><i class="bx bxl-facebook"></i> target="_blank">facebook.com/quyphong/</a>
+          <a href="https://www.linkedin.com/in/phong-tran-3b7b2780" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://join.skype.com/invite/hWboXgx3wyqE" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="https://github.com/quyphong91" class="google-plus"><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
