--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <h1 class="text-light"><a href="index.html">Tran Quy Phong</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.facebook.com/quyphong/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.linkedin.com/in/phong-tran-3b7b2780" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://join.skype.com/invite/hWboXgx3wyqE" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="https://github.com/quyphong91" class="google-plus"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/phong-tran-3b7b2780" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://join.skype.com/invite/hWboXgx3wyqE" target="_blank" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="https://github.com/quyphong91" target="_blank" class="google-plus"><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
