--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <h2>About</h2>
           <p>My expertise solely lies in taxation so far. 
             I am pursuing Certified Management Accountant program to expand my knowledge of finance.
-            As a technology true lover, I am enthusiastic about leveraging the rapid development 
+            As a true technology lover, I am enthusiastic about leveraging the rapid development 
             of technology to solve business problems</p>
         </div>
 
