--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Phong Tran</h1>
-      <p>I'm <span class="typed" data-typed-items="a tax consultant, technology enthusiast"></span></p>
+      <p>I'm <span class="typed" data-typed-items="a tax consultant, a technology enthusiast, a philomath"></span></p>
     </div>
   </section><!-- End Hero -->
 
