--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My expertise solely lies in taxation so far. 
+          <p>My expertise solely lies in taxation so far, hence 
             I am pursuing Certified Management Accountant program to expand my knowledge of finance.
             As a true technology lover, I am enthusiastic about leveraging the rapid development 
-            of technology to solve business problems</p>
+            of technology to solve business problems.</p>
         </div>
 
         <div class="row">
@@ -100,7 +100,7 @@
               My in-depth technical knowledge across from different types of tax (Personal Income Tax, Corporate Income Tax, 
               Value Added Tax, Foreign Contractor Tax, Customs duties) 
               could help your company meet compliance responsibilities while seizing available tax saving opportunities.
-              My almost 5 years at Big 4 companies also helped me develop professional working style, 
+              My almost 5 years at Big 4 firms also helped me develop professional working style, 
               foster curiosity to learn new things as well as a high sense of commitment and responsibility.
             </p>
             <div class="row">
@@ -135,7 +135,7 @@
     
             <div class="section-title">
               <h2>Facts</h2>
-              <p>Some key figures about my past engagements and valuable clients</p>
+              <p>Some key figures about my past engagements and valuable clients.</p>
             </div>
     
             <div class="row no-gutters">
