--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
               I have a broad understanding of how tax fits into the wider business picture.
               My in-depth technical knowledge across from different types of tax (Personal Income Tax, Corporate Income Tax, 
               Value Added Tax, Foreign Contractor Tax, Customs duties) 
-              could help your company meet compliance responsibilities while seizing available tax saving opportunities.
-              My almost 5 years at Big 4 firms also helped me develop professional working style, 
-              foster curiosity to learn new things as well as a high sense of commitment and responsibility.
+              could help your company meet the compliant responsibilities while seizing available tax saving opportunities.
+              My almost five-year employment at Big 4 firms also develops my professional working style, 
+              fosters curiosity to learn new things as well as encourages a high sense of commitment and responsibility.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -199,7 +199,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="icofont-presentation"></i></div>
             <h4 class="title"><a href="">Ad-hoc tax advice</a></h4>
-            <p class="description">Provide tax advice on ad-hoc basis via phone call, emails, memo, long-form report</p>
+            <p class="description">Provide tax advice on ad-hoc basis via phone call, email, memo, long-form report</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="icofont-court-hammer"></i></div>
@@ -303,7 +303,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Accountant cum HR</h4>
+              <h4>Accountant cum Human Resource</h4>
               <h5>May 2013 - Feb 2014</h5>
               <p><em>Olalani Resort &amp; Condotel (Da Nang)</em></p>
               <ul>
