--- a/index.html
+++ b/index.html
@@ -257,6 +257,11 @@
               <p><em>ACCA</em></p>
             </div>
             <div class="resume-item">
+              <h4>PostgreSQL</h4>
+              <h5>May 2019 - June 2019</h5>
+              <p><em>Udemy</em></p>
+            </div>
+            <div class="resume-item">
               <h4>Data analysis with Python</h4>
               <h5>Apr 2019 - May 2019</h5>
               <p><em>Coderschool</em></p>
