--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Phong Tran</h1>
-      <p>I'm <span class="typed" data-typed-items="a tax consultant, a technology enthusiast, a philomath"></span></p>
+      <h1>Welcome to my page</h1>
+      <p><span class="typed" data-typed-items="I'm a tax consultant, I'm a technology enthusiast, above all I'm a philomath"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -82,7 +82,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My expertise solely lies in taxation so far, hence 
+          <p>I am not a person who knows everything, but I am defintely a person who wants to learn everything.
+            My expertise solely lies in taxation so far, hence 
             I am pursuing Certified Management Accountant program to expand my knowledge of finance.
             As a true technology lover, I am enthusiastic about leveraging the rapid development 
             of technology to solve business problems.</p>
