--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Welcome to my page</h1>
-      <p><span class="typed" data-typed-items="I'm a tax consultant, I'm a technology enthusiast, above all I'm a philomath"></span></p>
+      <p><span class="typed" data-typed-items="I'm a tax consultant, I'm a technology enthusiast, Above all I'm a philomath"></span></p>
     </div>
   </section><!-- End Hero -->
 
