--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am not a person who knows everything, but I am defintely a person who wants to learn everything.
-            My expertise solely lies in taxation so far, hence 
-            I am pursuing Certified Management Accountant program to expand my knowledge of finance.
-            As a true technology lover, I am enthusiastic about leveraging the rapid development 
-            of technology to solve business problems.</p>
+          <p>I am not a person who knows everything, but I am defintely a person who wants to learn everything.</p>
+            <p>My expertise solely lies in taxation so far, hence 
+              I am pursuing Certified Management Accountant program to expand my knowledge of finance.
+              As a true technology lover, I am enthusiastic about leveraging the rapid development 
+              of technology to solve business problems.</p>
         </div>
 
         <div class="row">
