--- a/index.html
+++ b/index.html
@@ -391,7 +391,30 @@
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
+
+    </section><!-- Download section -->
+
+    
+    <div class="section-title">
+      <h2>Download</h2>
+      <p>You can download printing version here.</p>
+    </div>
+
+    <div class="Download">
+
+      <div class="col-lg-6" data-aos="fade-up">
+
+        <div class="progress">
+          <a href="\assets\download\Tran Quy Phong - Resume.pdf" download="proposed_file_name">Download</a>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+</section><!-- End download Section -->
 
   </main><!-- End #main -->
 
