--- a/index.html
+++ b/index.html
@@ -405,7 +405,9 @@
       <div class="col-lg-6" data-aos="fade-up">
 
         <div class="progress">
-          <a href="\assets\download\Tran Quy Phong - Resume.pdf" download="proposed_file_name">Download</a>
+          <form method="get" action="assets\download\Tran Quy Phong - Resume.pdf">
+            <button type="submit">Download!</button>
+         </form>
           </div>
         </div>
 
