--- a/index.html
+++ b/index.html
@@ -405,9 +405,7 @@
       <div class="col-lg-6" data-aos="fade-up">
 
         <div class="progress">
-          <form method="get" action="assets\download\Tran Quy Phong - Resume.pdf">
-            <button type="submit">Download!</button>
-         </form>
+          <a href="\assets\download" download="Tran Quy Phong - Resume.pdf">Download</a>
           </div>
         </div>
 
