--- a/index.html
+++ b/index.html
@@ -393,27 +393,28 @@
       </div>
 
     </section><!-- Download section -->
-
+    <section id="download" class="download">
+      <div class="container">
     
-    <div class="section-title">
-      <h2>Download</h2>
-      <p>You can download printing version here.</p>
-    </div>
+        <div class="section-title">
+          <h2>Download</h2>
+          <p>You can download printing version here.</p>
+        </div>
 
-    <div class="Download">
+        <div class="Download">
 
-      <div class="col-lg-6" data-aos="fade-up">
+          <div class="col-lg-6" data-aos="fade-up">
 
-        <div class="progress">
-          <a href="\assets\download" download="Tran Quy Phong - Resume.pdf">Download</a>
+            <div class="progress">
+              <a href="\assets\download" download="Tran Quy Phong - Resume.pdf">Download</a>
+              </div>
+            </div>
+
           </div>
+
         </div>
 
       </div>
-
-    </div>
-
-  </div>
 </section><!-- End download Section -->
 
   </main><!-- End #main -->
