--- a/index.html
+++ b/index.html
@@ -401,11 +401,11 @@
           <p>You can download printing version here.</p>
         </div>
 
-        <div class="Download">
+        <div class="download">
 
           <div class="col-lg-6" data-aos="fade-up">
 
-            <div class="progress">
+            <div class="button">
               <a href="\assets\download" download="Tran Quy Phong - Resume.pdf">Download</a>
               </div>
             </div>
