--- a/index.html
+++ b/index.html
@@ -391,31 +391,7 @@
         </div>
 
       </div>
-
-    </section><!-- Download section -->
-    <section id="download" class="download">
-      <div class="container">
-    
-        <div class="section-title">
-          <h2>Download</h2>
-          <p>You can download printing version here.</p>
-        </div>
-
-        <div class="download">
-
-          <div class="col-lg-6" data-aos="fade-up">
-
-            <div class="button">
-              <a href="\assets\download" download="Tran Quy Phong - Resume.pdf">Download</a>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-</section><!-- End download Section -->
+    </section><!-- End Skills Section -->
 
   </main><!-- End #main -->
 
