--- a/index.html
+++ b/index.html
@@ -406,13 +406,13 @@
 
             <div class="download resume">
               <a class="btn btn-danger" role="button" href="assets\download\Tran Quy Phong - Resume.pdf" 
-              download="Tran Quy Phong - Resume.pdf">Resume</a>
+              download="Tran Quy Phong - Resume.pdf">My resume</a>
               </div>
             </div>
 
             <div class="download credentials">
               <a class="btn btn-danger" role="button" href="assets\download\My credentials.pdf" 
-              download="My credentials.pdf">Resume</a>
+              download="My credentials.pdf">My credentials</a>
               </div>
             </div>
 
